--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -34,15 +34,15 @@
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
               <a href="menu-categories.html">
-              	<br class="visible-xs"> Chicken</a>
+              	<br class="hidden-xs"> Chicken</a>
             </li>
             <li>
               <a href="#">
-              	<br class="visible-xs"> Beef</a>
+              	<br class="hidden-xs"> Beef</a>
             </li>
             <li>
               <a href="#">
-              	<br class="visible-xs"> Sushi</a>
+              	<br class="hidden-xs"> Sushi</a>
           </ul>
         </div>
       </div>
