--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -106,10 +106,9 @@
 
     </div>
 
-    <!-- jQuery (Bootstrap JS plugins depend on it) -->
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- <script src="js/script.js"></script> -->
+   
+    <script scr="js/jquery-1.11.3.min.js"></script>
+
 
 </body>
 
