--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -107,7 +107,9 @@
     </div>
 
    
-    <script scr="js/jquery-1.11.3.min.js"></script>
+   <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 
 
 </body>
