--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -33,7 +33,7 @@
     
     <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item deactive">
                 <a class="nav-link" href="#">Chicken <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
